# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/gn/fangtian.gni")
import("//input/multimodalinput_mini.gni")
event_filter_path = "${mmi_path}/service/filter"

config("mmi_event_filter_config") {
  include_dirs = [
    "//input/interfaces/native/innerkits/common/include",
    "//input/interfaces/native/innerkits/event/include",
    "//input/service/event_handler/include",
    "//input/util/common/include",
    "${event_filter_path}/include",
    "//input/stub",
  ]
}

ft_source_set("mmi_event_filter_service") {
  sources = [
    "${event_filter_path}/src/event_filter_service.cpp",
    "${event_filter_path}/src/event_filter_stub.cpp",
  ]

  configs = [ ":mmi_event_filter_config" ]

  #deps = [
  #  "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
  #  "//commonlibrary/c_utils/base:utils",
  #  "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
  #]
  public_configs = [
    "//build/gn/configs/system_libs:hilog_config",
    "//build/gn/configs/system_libs:c_utils_config",
    "//build/gn/configs/system_libs:ipc_core_config",
  ]
}

ft_source_set("mmi_event_filter_proxy") {
  sources = [
    "${event_filter_path}/src/event_filter_death_recipient.cpp",
    "${event_filter_path}/src/event_filter_handler.cpp",
    "${event_filter_path}/src/event_filter_proxy.cpp",
  ]

  configs = [ ":mmi_event_filter_config" ]

  defines = []

  if (input_feature_keyboard) {
    defines += [ "OHOS_BUILD_ENABLE_KEYBOARD" ]
  }
  if (input_feature_touchscreen) {
    defines += [ "OHOS_BUILD_ENABLE_TOUCH" ]
  }
  if (input_feature_mouse) {
    defines += [ "OHOS_BUILD_ENABLE_POINTER" ]
  }
  if (input_feature_touchscreen) {
    defines += [ "OHOS_BUILD_ENABLE_TOUCH" ]
  }

  #deps = [
  #  "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
  #  "//commonlibrary/c_utils/base:utils",
  #  "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
  #]
  public_configs = [
    "//build/gn/configs/system_libs:hilog_config",
    "//build/gn/configs/system_libs:c_utils_config",
    "//build/gn/configs/system_libs:ipc_core_config",
  ]
}
